--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@
     font-size: 18px;
 }
 .wideCountdownSize1 .countdown-period {
-    font-size: 11px;
+    font-size: 9px;
 }
 .cdLabelWhite .countdown-period {
     color:#fff;
@@ -325,47 +325,39 @@
       color: red;
   }
 
-  @font-face {
-    font-family: poppins-bold;
-    src: url(../fonts/Poppins-Bold.ttf);
-    font-display: swap;
-}
-.font-poppins-bold {
-    font-family: poppins-bold;
-}
-
-@font-face {
-    font-family: poppins-extrabold;
-    src: url(../fonts/Poppins-ExtraBold.ttf);
-    font-display: swap;
-}
-.font-poppins-extrabold {
-    font-family: poppins-extrabold;
-}
-
-@font-face {
-    font-family: poppins-light;
-    src: url(../fonts/Poppins-Light.ttf);
-    font-display: swap;
-}
-.font-poppins-light {
-    font-family: poppins-light;
-}
-
-@font-face {
-    font-family: poppins-medium;
-    src: url(../fonts/Poppins-Medium.ttf);
-    font-display: swap;
-}
-.font-poppins-medium {
-    font-family: poppins-medium;
-}
-
-@font-face {
-    font-family: poppins-regular;
-    src: url(../fonts/Poppins-Regular.ttf);
-    font-display: swap;
-}
-.font-poppins-regular {
-    font-family: poppins-regular;
-}
+  /* sideNav Button */
+  /* #mySidenav a {
+    position: absolute;
+    left: -50px;
+    transition:all 0.2s ease-in;
+    padding: 15px;
+    width: 100px;
+    text-decoration: none;
+    font-size: 20px;
+    color: white;
+    border-radius: 0 5px 5px 0;
+  }
+  
+  #mySidenav a:hover {
+    left: 0;
+  }
+  
+  #about {
+    top: 20px;
+    background-color: #4CAF50;
+  }
+  
+  #blog {
+    top: 80px;
+    background-color: #2196F3;
+  }
+  
+  #projects {
+    top: 140px;
+    background-color: #f44336;
+  }
+  
+  #contact {
+    top: 200px;
+    background-color: #555
+  } */
