--- a/css/style.css
+++ b/css/style.css
@@ -516,3 +516,36 @@ background-color: #D1D1D1;
 #st-2.st-hidden {
     width: 96px;
 }
+
+/* youtube video css */
+.play-button {
+    width: 90px;
+    height: 60px;
+    background-color: #333;
+    box-shadow: 0 0 30px rgba( 0,0,0,0.6 );
+    z-index: 1;
+    opacity: 0.8;
+    border-radius: 6px;
+}
+.play-button:before {
+    content: "";
+    border-style: solid;
+    border-width: 15px 0 15px 26.0px;
+    border-color: transparent transparent transparent #fff;
+}
+.youtube img,
+.youtube .play-button {
+    cursor: pointer;
+}
+.youtube img,
+.youtube iframe,
+.play-button,
+.play-button:before {
+    position: absolute;
+}
+.play-button,
+.play-button:before {
+    top: 50%;
+    left: 50%;
+    transform: translate3d( -50%, -50%, 0 );
+}
