--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@
     font-size: 18px;
 }
 .wideCountdownSize1 .countdown-period {
-    font-size: 9px;
+    font-size: 15px;
 }
 .cdLabelWhite .countdown-period {
     color:#fff;
@@ -552,28 +552,22 @@ background-color: #D1D1D1;
 /* mobile sidenav arrow css  */
 .arrow {
     display: inline-block;
-    position: relative;
-    margin: 0 36px 36px 0;
-    padding: 6px 0 6px 6px;
-    font-size: 18px;
-    line-height: 18px;
+    padding: 20px 0px;
     font-family: arial, helvetica, sans-serif;
     border: 2px solid rgb(0,0,0);
-    border-right: none;
     border-radius: 5px 0 0 5px;
     box-shadow: 0 4px 2px -2px rgba(0,0,0,0.4);
-    }
-    
-    .arrow::after {
-    content:'';
+}   
+.arrow::after {
+    content: '';
     position: absolute;
     display: inline-block;
-    top: 12px;
-    right: -30px;
-    width: 61px;
-    height: 63px;
+    top: 25px;
+    right: -16px;
+    width: 30px;
+    height: 30px;
     border-top: 2px solid rgb(0,0,0);
     border-right: 2px solid rgb(0,0,0);
-    box-shadow: 4px 0 2px -2px rgba(0,0,0,0.4);
+    background-color: #ccc;
     transform: rotate(45deg);
     }
